[gd_scene load_steps=9 format=3 uid="uid://c1k4vpxe2dogp"]

[ext_resource type="Script" uid="uid://caoeoo80krmy7" path="res://Scripts/Interface/ConfigureConnectionMenu.gd" id="1_6uu1x"]
[ext_resource type="FontFile" uid="uid://b6ixxpdy5in1g" path="res://Fonts/Schoolbell-Regular.ttf" id="2_cv61b"]
[ext_resource type="Theme" uid="uid://dhwifj73kh3md" path="res://Theme/Menu.tres" id="3_cv61b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uu1x"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_13vea"]
font = ExtResource("2_cv61b")
font_size = 80
font_color = Color(0, 0.513726, 0.854902, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(6, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cv61b"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpisy"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_uwanr"]
font = ExtResource("2_cv61b")
font_size = 60
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="ConfigureConnectionMenu" type="Node2D"]
script = ExtResource("1_6uu1x")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_top = 108.0
offset_right = 1152.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6uu1x")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="PlayOnlineLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cv61b")
theme_override_font_sizes/font_size = 70
text = "Kemispillet"
label_settings = SubResource("LabelSettings_13vea")
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="JoinOptions" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="HostContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/JoinOptions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/JoinOptions/HostContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cv61b")

[node name="HostButton" type="MenuButton" parent="PanelContainer/VBoxContainer/JoinOptions/HostContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_cv61b")
theme_override_fonts/font = ExtResource("2_cv61b")
theme_override_font_sizes/font_size = 40
text = "Host"

[node name="JoinContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/JoinOptions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/JoinOptions/JoinContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mpisy")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/JoinOptions/JoinContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConnectAddressInput" type="LineEdit" parent="PanelContainer/VBoxContainer/JoinOptions/JoinContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_cv61b")
placeholder_text = "Host IP-addresse"
max_length = 40

[node name="JoinButton" type="MenuButton" parent="PanelContainer/VBoxContainer/JoinOptions/JoinContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_cv61b")
theme_override_fonts/font = ExtResource("2_cv61b")
theme_override_font_sizes/font_size = 40
text = "Join"

[node name="ErrorMessage" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 190.0
offset_top = 232.0
offset_right = 778.0
offset_bottom = 405.0
rotation = -0.335037
text = "Error: something_wrong"
label_settings = SubResource("LabelSettings_uwanr")

[connection signal="button_up" from="PanelContainer/VBoxContainer/JoinOptions/HostContainer/PanelContainer2/HostButton" to="." method="_on_host_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/JoinOptions/JoinContainer/PanelContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_button_up"]
